feat(experience): Add professional experience section

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,140 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
     </div>
 </section>
 
+<section id="experience">
+    <script defer src="/assets/js/experience.js"></script>
+    <div class="container">
+        <div class="content">
+            <span class="topper">Experience</span>
+            <h2 class="title">Professional Works</h2>
+            <p class="text">
+                I’ve worked across a few different teams building machine
+                learning systems, data pipelines, and tools that actually get
+                used, from climate and compliance to edge devices and backend
+                platforms for {{ currentYear - startYear }}+. Below are
+                some of the places I’ve worked, what I focused on, and how it
+                turned out.
+            </p>
+            <ul class="faq-group">
+                <li class="experience-item active">
+                    <button class="service-button">
+                        <img
+                            class="icon"
+                            aria-hidden="true"
+                            loading="lazy"
+                            decoding="async"
+                            src="/assets/images/company/math_song.jpeg"
+                            alt="icon"
+                            width="32"
+                            height="32"
+                        />
+                        <span class="button-text">
+                            Math Song
+                            <span class="time-line">Sep 2024 - Present</span>
+                        </span>
+                        <span class="indicator" aria-hidden="true"></span>
+                    </button>
+                    <p class="item-p">
+                        I design and build production-ready full-stack
+                        automation systems and AI agents with a focus on
+                        reliability, security, and scalability.
+                    </p>
+                </li>
+                <li class="experience-item">
+                    <button class="service-button">
+                        <img
+                            class="icon"
+                            aria-hidden="true"
+                            loading="lazy"
+                            decoding="async"
+                            src="/assets/images/company/fair_dinkum.jpg"
+                            alt="icon"
+                            width="32"
+                            height="32"
+                        />
+                        <span class="button-text">
+                            Fair Dinkum Systems
+                            <span class="time-line">Dec 2024 - Mar 2025</span>
+                        </span>
+                        <span class="indicator" aria-hidden="true"></span>
+                    </button>
+                    <p class="item-p">
+                        I built machine learning systems for predicting battery
+                        health long term, with a focus on reproducibility and
+                        model reliability.
+                    </p>
+                </li>
+                <li class="experience-item">
+                    <button class="service-button">
+                        <img
+                            class="icon"
+                            aria-hidden="true"
+                            loading="lazy"
+                            decoding="async"
+                            src="/assets/images/company/aigorithm.jpeg"
+                            alt="icon"
+                            width="32"
+                            height="32"
+                        />
+                        <span class="button-text">
+                            A.I.gorithm
+                            <span class="time-line">Feb 2024 - Sep 2024</span>
+                        </span>
+                        <span class="indicator" aria-hidden="true"></span>
+                    </button>
+                    <p class="item-p">
+                        I worked on live emissions mapping, deforestation
+                        detection, and Scope 3 data analysis. Delivered
+                        geospatial tools using satellite, methane, and CO₂
+                        datasets, adapted for Australian conditions.
+                    </p>
+                </li>
+                <li class="experience-item">
+                    <button class="service-button">
+                        <img
+                            class="icon"
+                            aria-hidden="true"
+                            loading="lazy"
+                            decoding="async"
+                            src="/assets/images/company/lux.jpeg"
+                            alt="icon"
+                            width="32"
+                            height="32"
+                        />
+                        <span class="button-text">
+                            Lux Aerobot
+                            <span class="time-line">Jan 2022 - Jan 2024</span>
+                        </span>
+                        <span class="indicator" aria-hidden="true"></span>
+                    </button>
+                    <p class="item-p">
+                        I deployed computer vision models on high-altitude
+                        balloon platforms. Designed pipelines for onboard
+                        inference, and supporting environmental monitoring.
+                    </p>
+                </li>
+            </ul>
+            <a
+                href="/assets/images/resume.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="button-solid"
+                >View My Resume</a
+            >
+        </div>
+        <div class="image-group">
+            <picture class="picture" id="experience-image">
+                <img
+                    src="/assets/images/company/lux_image.jpg"
+                    alt="hackathon"
+                    width="605"
+                    height="690"
+                />
+            </picture>
+        </div>
+    </div>
+</section>
+
 <section id="intro">
     <script defer src="/assets/js/about.js"></script>
     <div class="container">
