--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -12,6 +12,11 @@ eleventyNavigation:
 <link rel="stylesheet" href="/assets/css/about.css" />
 {% endblock %} {% block body %}
 
+<section id="int-hero">
+  <h1 id="home-h">About Me</h1>
+  <p class="description">And a few things I’ve been up to <br>[Under Construction LOL]</p>
+</section>
+
 <section id="text-right">
     <div class="container">
         <div class="video-container">
@@ -74,98 +79,6 @@ eleventyNavigation:
                 taking first place for the pitch, and second for the algorithm
                 itself.
             </p>
-        </div>
-    </div>
-</section>
-
-<section id="text-right">
-    <div class="container">
-        <picture class="picture">
-            <!--Mobile Image-->
-            <source
-                media="(max-width: 600px)"
-                srcset="
-                    https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg
-                "
-            />
-            <!--Tablet and above Image-->
-            <source
-                media="(min-width: 601px)"
-                srcset="
-                    https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg
-                "
-            />
-            <img
-                loading="lazy"
-                decoding="async"
-                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg"
-                alt="room"
-                width="494"
-                height="700"
-            />
-        </picture>
-        <div class="content">
-            <span class="topper">What We Do</span>
-            <h2 class="title">House Painting Contractors For Oak Harbor</h2>
-            <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <p class="text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum
-            </p>
-            <a href="" class="button-solid">Get Free Quote</a>
-        </div>
-    </div>
-</section>
-
-<section id="text-left">
-    <div class="container">
-        <picture class="picture">
-            <!--Mobile Image-->
-            <source
-                media="(max-width: 600px)"
-                srcset="
-                    https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg
-                "
-            />
-            <!--Tablet and above Image-->
-            <source
-                media="(min-width: 601px)"
-                srcset="
-                    https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg
-                "
-            />
-            <img
-                loading="lazy"
-                decoding="async"
-                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg"
-                alt="room"
-                width="494"
-                height="700"
-            />
-        </picture>
-        <div class="content">
-            <span class="topper">What We Do</span>
-            <h2 class="title">House Painting Contractors For Oak Harbor</h2>
-            <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <p class="text">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum
-            </p>
-            <a href="" class="button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
