--- a/src/content/pages/project.html
+++ b/src/content/pages/project.html
@@ -16,8 +16,10 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-  <h1 id="home-h">My Project</h1>
-  <p class="description">Where I wrote about interesting stuff I worked on</p>
+  <div class="container">
+    <h1 id="home-h">My Project</h1>
+    <p class="description">Where I wrote about interesting stuff I worked on</p>
+  </div>
 </section>
 
 <!-- ============================================ -->
