--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            End-to-End ML & Automation Workflows
+                            End-to-End ML & Automation
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
