feat: Front page content (reposition)

--- a/src/index.html
+++ b/src/index.html
@@ -245,15 +245,14 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            End-to-End ML & Automation
+                            AI Agents & Automation
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        I design and build ML systems from first prototype to
-                        production, including data pipelines, APIs, and
-                        automation. I can work with PyTorch, APIs, and Ops, etc.
-                        to make AI stuffs actually usable.
+                        I design and build AI-powered agents and automation
+                        systems that integrate with your operations, using LLMs,
+                        LangChain, Zapier, and Airtable.
                     </p>
                 </li>
                 <li class="faq-item">
@@ -268,14 +267,14 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             width="32"
                             height="32"
                         />
-                        <span class="button-text"> Climate & ESG Tools </span>
+                        <span class="button-text">
+                            Fullstack Tools & Internal Apps
+                        </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        I worked on systems that track, monitor, model, or
-                        report on climate data, often using spatial pipelines or
-                        computer vision. That includes tools for Scope 3, ESG,
-                        or compliance cases.
+                        I build internal tools, dashboards, and smart workflows
+                        using Next.js, Vue and Django, Laravel, and more.
                     </p>
                 </li>
                 <li class="faq-item">
@@ -291,15 +290,14 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            Modeling with Sensors & Scientific Data
+                            Data Systems for Remote Sensing & ESG
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        Some of my work blends physics, environmental signals,
-                        and machine learning, especially when the data is messy
-                        or tied to physical systems. I've used physiinformed
-                        networks and custom data pipelines etc..
+                        When relevant, I still work with spatial and
+                        environmental data, especially if it intesects with
+                        compliance or monitoring use cases.
                     </p>
                 </li>
                 <li class="faq-item">
@@ -315,15 +313,13 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            Hardware & Computer Vision
+                            Prototyping with Sensors / Vision / IoT
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        I’ve worked with embedded systems, high-alt balloons,
-                        and vision-based monitors. I build quick prototypes that
-                        connect sensors, firmware, and ML logic, good for
-                        testing real-world ideas fast.
+                        I occasionally prototype fast hardware + ML systems when
+                        it supports a practical goal.
                     </p>
                 </li>
             </ul>
@@ -430,7 +426,11 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                     height="690"
                 />
                 <div class="overlay">
-                    <p class="overlay-text">I love hiking!<br>This particular one is at Werribee Gorge with my seniors at ITPA<br><br>Ask me out if you want company :D</p>
+                    <p class="overlay-text">
+                        I love hiking!<br />This particular one is at Werribee
+                        Gorge with my seniors at ITPA<br /><br />Ask me out if
+                        you want company :D
+                    </p>
                 </div>
             </picture>
             <picture class="picture picture-6 img-hover">
@@ -441,7 +441,9 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                     height="690"
                 />
                 <div class="overlay">
-                    <p class="overlay-text">Not an audiophile but I love music and my gear :D</p>
+                    <p class="overlay-text">
+                        Not an audiophile but I love music and my gear :D
+                    </p>
                 </div>
             </picture>
         </div>
