feat: update icon on front page

--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,7 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             aria-hidden="true"
                             loading="lazy"
                             decoding="async"
-                            src="/assets/svgs/map.svg"
+                            src="/assets/svgs/allcast.svg"
                             alt="icon"
                             width="32"
                             height="32"
@@ -323,7 +323,7 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                     </p>
                 </li>
             </ul>
-            <a href="/about" class="button-solid">More About Me</a>
+            <a href="/#Contact" class="button-solid">Work with me</a>
         </div>
     </div>
 </section>
