--- a/src/index.html
+++ b/src/index.html
@@ -245,12 +245,12 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            AI Agents & Automation
+                            AI Agents, Automation, and RPA
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        I design and build AI-powered agents and automation
+                        I design and build AI-powered agents, automation, and RPA
                         systems that integrate with your operations, using LLMs,
                         LangChain, Zapier, and Airtable.
                     </p>
