fix(style): Edit stylesheet path for contact sections

--- a/src/index.html
+++ b/src/index.html
@@ -287,6 +287,28 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             aria-hidden="true"
                             loading="lazy"
                             decoding="async"
+                            src="/assets/svgs/terminal.svg"
+                            alt="icon"
+                            width="32"
+                            height="32"
+                        />
+                        <span class="button-text">
+                            Static Web Development
+                        </span>
+                        <span class="indicator" aria-hidden="true"></span>
+                    </button>
+                    <p class="item-p">
+                        I design and build business websites with blogging
+                        features, contact forms, and more.
+                    </p>
+                </li>
+                <li class="faq-item">
+                    <button class="service-button">
+                        <img
+                            class="icon"
+                            aria-hidden="true"
+                            loading="lazy"
+                            decoding="async"
                             src="/assets/svgs/graph.svg"
                             alt="icon"
                             width="32"
